# stellaris-core

./: .gitignore  README.md
.github/workflows/: ci.yml  publish.yml
circuits/: PUBLIC_SIGNALS.md  agg_spike.circom  agg_spike_repo.circom  inclusion.circom  inclusion_repo.circom  merkle_sum_spike.circom  por.circom  por_v2.circom  por_v2_repo.circom  por_v3.circom
circuits/components/: commit.circom  merkle_sum_inclusion.circom  merkle_sum_node.circom  merkle_sum_root.circom  price_commit.circom  range_check.circom  sum_gte.circom
circuits/inputs/: boundary.json  insolvent.json  merkle_sum_spike.json  solvent.json
client/: README.md  package-lock.json  package.json  tsconfig.json
client/scripts/: agg-input.mjs  encoding-check.mjs  inclusion-check.mjs  inclusion-witness.mjs  por-v2-attack-input.mjs  por-v2-input.mjs  por-v2-insolvent-input.mjs  por-v3-input.mjs  prove-check.mjs
contracts/mint-guard/: Cargo.toml
contracts/mint-guard/src/: lib.rs
contracts/stellaris/: Cargo.toml
contracts/stellaris/src/: admin.rs  bls_g2_generator.rs  bls_sig.rs  bls_sig_tests.rs  lib.rs  mint_guard.rs  signals.rs  storage.rs  test.rs  test_d1.rs  test_fixtures.rs  test_fixtures_v2.rs  test_fixtures_v3.rs  test_mint_guard.rs  test_v2.rs  test_v3.rs  types.rs  verifier.rs
contracts/stellaris/test_snapshots/test/: test_attest_boundary_real.1.json  test_attest_solvent_real.1.json  test_reject_replay_real.1.json  test_requires_auth.1.json
contracts/stellaris/test_snapshots/test_mint_guard/: test_check_mint_allowed_reflects_state.1.json  test_current_period_only_moves_forward.1.json  test_custodian_binding_required_blocks_unbound.1.json  test_double_init_fails.1.json  test_freshness_age_enforced.1.json  test_mint_allowed_after_real_attestation.1.json  test_mint_blocked_without_attestation.1.json  test_mint_rejects_non_positive_amounts.1.json  test_oracle_binding_required_blocks_unbound.1.json  test_period_rollover_blocks_until_reattest.1.json  test_stale_period_attestation_rejected.1.json  test_supply_cap_enforced.1.json
contracts/stellaris/test_snapshots/test_v2/: test_attest_v2_solvent_real.1.json  test_v1_v2_isolation.1.json
contracts/stellaris/test_snapshots/test_v3/: test_attest_v3_one_asset_underwater.1.json  test_attest_v3_reject_priced_insolvent.1.json  test_attest_v3_solvent_real.1.json  test_c2_signature_over_wrong_commitment_rejected.1.json  test_c2_signed_attest_succeeds_and_binds.1.json  test_c2_wrong_signer_rejected.1.json  test_c3_oracle_bound_true_on_match.1.json  test_c3_oracle_commitment_readable.1.json  test_c3_oracle_mismatch_rejected.1.json  test_c3_publish_requires_oracle_auth.1.json  test_c3_set_oracle_requires_admin_auth.1.json  test_c3_unbound_when_no_commitment_published.1.json  test_v3_isolation_from_v2.1.json
docs/: AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  README.md  ROADMAP.md
fixtures/: README.md  verification_key.json
notes/: P0-VERIFIER-FINDINGS.md
protocol-spec/: README.md  public-signals.json
sdk/rust/: Cargo.toml
sdk/rust/src/: lib.rs
sdk/rust/test-vectors/: public-signals.json
setup/: ceremony-v2.sh  ceremony-v3.sh  ceremony.sh  commitment-binding-check.sh  encode-testnet-args.mjs  export-fixtures-v2.sh  export-fixtures-v3.sh  export-fixtures.sh  gen-contract-fixtures-v2.mjs  gen-contract-fixtures-v3.mjs  gen-contract-fixtures.mjs  inclusion-check.sh  inclusion-prove.sh  liability-attack-check.sh  mint-guard-demo.sh  negative-witness-check.sh  por-v2-check.sh  por-v3-check.sh  testnet-deploy.sh
(+76 files in other folders)
